--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,17 @@
+alembic==0.8.4
 Flask==0.10.1
+Flask-Admin==1.4.0
+Flask-Migrate==1.7.0
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.1
+Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.8
+Mako==1.0.3
 MarkupSafe==0.23
+PyMySQL==0.7.1
+python-editor==0.5
+SQLAlchemy==1.0.11
 Werkzeug==0.11.3
 wheel==0.24.0
+WTForms==2.1
